# dbreadwrite

./: .env  CONTRIBUTING.md  Cargo.toml  README.md  type_mapping.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml
migrations/2021-05-18-033853_accounts/: up.sql
migrations/2021-05-18-045152_mints/: up.sql
migrations/2021-05-18-045509_transfers/: up.sql
migrations/2021-05-18-050040_burns/: down.sql  up.sql
src/: lib.rs  random_events.rs  schema.rs  schema_management.rs
typemapping/: type_mapping.json
